k8s-manifest/networking/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: flash-app-gateway-class
spec:
  controllerName: flash-app.com/gateway-controller
