k8s-manifest/networking/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flash-app-httproute
  namespace: default
spec:
  parentRefs:
  - name: flash-app-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: flash-app-service
      port: 5000
